tests/fixtures/invalid/pow_dict_str_float.py
# Cannot call pow() with Dict[str, int], Str, Float
x = pow({"a": 1}, "hello", 1.0)
